Fixing memory leak for persistent workers